--- a/css/styles.css
+++ b/css/styles.css
@@ -605,7 +605,12 @@ footer {
         z-index: 2;
         padding: 0;
         margin: 0;
-        display: inline-block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 2em;
+        min-height: 2em;
+        padding: 0.5em;
     }
     .mobile-menu li.dropdown.open > .dropdown-arrow {
         transform: translateY(-50%) rotate(-180deg);
